# xidle

./: LICENSE  configure.ac
src/: Makefile.am  xidle.1  xidle.c
